re-organise codes, add comments

--- a/index.html
+++ b/index.html
@@ -62,17 +62,14 @@
           <p>By Tuan Minh</p>
         </div>
         <section id="introduction">
-          <div class="line-break"></div>
           <p class="title">The Test</p>
 
           <p>The test contains 10 questions and there is no time limit.</p>
-          <div class="line-break"></div>
           <p>
             The test is not official, it's just a nice way to see how much you
             know, or don't know, about HTML.
           </p>
 
-          <div class="line-break"></div>
           <p class="title">Count Your Score</p>
 
           <p>
@@ -81,7 +78,7 @@
             points.
           </p>
           <div class="box">
-            <p id="start">Start the quiz</p>
+            <p class="title">Start the quiz</p>
             <p>Good luck!</p>
             <button class="blue">Start the HTML quiz ></button>
           </div>
