--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYpE html>
 <html lang="en">
   <!-- TODO(you): Make whatever changes needed to complete the assignment! -->
 
@@ -18,7 +18,7 @@
       sizes="16x16"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Pangolin:400,700|Proxima+Nova"
+      href="https://fonts.googleapis.com/css?family=pangolin:400,700|proxima+Nova"
       rel="stylesheet"
       type="text/css"
     />
@@ -57,29 +57,28 @@
         <section id="quiz-name">
           <h1>HTML Quiz</h1>
         </section>
-        <div class="line-break"></div>
         <div id="author">
           <p>By Tuan Minh</p>
         </div>
         <section id="introduction">
-          <p class="title">The Test</p>
+          <p class="title with-margin">The Test</p>
 
-          <p>The test contains 10 questions and there is no time limit.</p>
-          <p>
+          <p class="with-margin">The test contains 10 questions and there is no time limit.</p>
+          <p class="with-margin">
             The test is not official, it's just a nice way to see how much you
             know, or don't know, about HTML.
           </p>
 
-          <p class="title">Count Your Score</p>
+          <p class="title with-margin">Count Your Score</p>
 
-          <p>
+          <p class="with-margin">
             You will get 1 point for each correct answer. At the end of the
             Quiz, your total score will be displayed. Maximum score is 10
             points.
           </p>
           <div class="box">
-            <p class="title">Start the quiz</p>
-            <p>Good luck!</p>
+            <p class="title with-margin">Start the quiz</p>
+            <p class="with-margin">Good luck!</p>
             <button class="blue">Start the HTML quiz ></button>
           </div>
           <!-- -->
